[package]
name = "myra"
version = "0.1.0"
edition = "2024"
description = "A simple project manager built with Rust"

[dependencies]
clap = { version = "4.5.37", features = ["cargo"] }
console = "0.15.11"
dialoguer = { version = "0.11.0", features = ["password"] }
git2 = "0.20.4"
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
whoami = "1.6.0"
